fixed java 9 compatibility after merge with master